Theme converter implemented for App.xaml.

--- a/GuncelTelevizyonUWP/App.xaml
+++ b/GuncelTelevizyonUWP/App.xaml
@@ -4,6 +4,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GuncelTelevizyonUWP"
-    RequestedTheme="Light">
+    xmlns:converters="using:GuncelTelevizyonUWP.Converters"
+    RequestedTheme="Dark">
+
+    <prismWindows:PrismApplication.Resources>
+        <converters:AppThemeToRequestedThemeConverter x:Key="themeConverter" />
+    </prismWindows:PrismApplication.Resources>
+    
 
 </prismWindows:PrismApplication>
