--- a/GuncelTelevizyonUWP/Views/MainPage.xaml
+++ b/GuncelTelevizyonUWP/Views/MainPage.xaml
@@ -1,10 +1,11 @@
 ﻿<helpers:BasePage
     prism:ViewModelLocator.AutoWireViewModel="True"
     xmlns:prism="using:Prism.Windows.Mvvm"
+    xmlns:helpers="using:GuncelTelevizyonUWP.Helpers"
     x:Class="GuncelTelevizyonUWP.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:helpers="using:GuncelTelevizyonUWP.Helpers"
+    
     xmlns:local="using:GuncelTelevizyonUWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -46,7 +47,7 @@
         </SplitView.Pane>
 
         <SplitView.Content>
-            <helpers:SubPage PageName="Test" PageParameter="selam" />
+            <helpers:SubPage PageName="ChannelBrowser" PageParameter="selam" />
         </SplitView.Content>
     </SplitView>
     
