--- a/GuncelTelevizyonUWP/Views/SettingsPage.xaml
+++ b/GuncelTelevizyonUWP/Views/SettingsPage.xaml
@@ -7,10 +7,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GuncelTelevizyonUWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    Tag="Ayarlar"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Grid Margin="24">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Text="Tema" Style="{StaticResource SubheaderTextBlockStyle}" />
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                <RadioButton Content="Açık" IsChecked="{Binding IsThemeDark,Mode=TwoWay,Converter={StaticResource booleanToReverse}}" />
+                <RadioButton Content="Koyu" IsChecked="{Binding IsThemeDark,Mode=TwoWay}" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </helpers:BasePage>
