Navigating to ChannelBrowserPage when CategoryItem is changed implemented.

--- a/GuncelTelevizyonUWP/Views/MainPage.xaml
+++ b/GuncelTelevizyonUWP/Views/MainPage.xaml
@@ -97,7 +97,7 @@
                         <Button Content="" Command="{Binding AnimatePaneCommand}" FontFamily="Segoe MDL2 Assets" Grid.Row="0" Background="{x:Null}" FontSize="22" Width="50" Style="{StaticResource OpenCloseButtonTemplate}" />
                     </Grid>
                     <!-- Channel Categories -->
-                    <ListView Margin="0,10" Grid.Row="1" ItemsSource="{Binding ChannelCategoryItems}">
+                    <ListView Margin="0,10" Grid.Row="1" ItemsSource="{Binding ChannelCategoryItems}" SelectedItem="{Binding SelectedChannelCategoryItem,Mode=TwoWay}">
                         <interactivity:Interaction.Behaviors>
                             <core:EventTriggerBehavior EventName="SelectionChanged">
                                 <core:InvokeCommandAction Command="{Binding PaneClosingCommand}"/>
