2 new theme converters implemented in order to adapt the new SettingsPage UI.

--- a/GuncelTelevizyonUWP/App.xaml
+++ b/GuncelTelevizyonUWP/App.xaml
@@ -8,6 +8,8 @@
 
     <helpers:BaseApplication.Resources>
         <converters:BooleanToReverseConverter x:Key="booleanToReverse" />
+        <converters:DarkAppThemeToBooleanConverter x:Key="darkThemeToBoolean" />
+        <converters:LightThemeToBooleanConverter x:Key="lightThemeToBoolean" />
     </helpers:BaseApplication.Resources>
     
 </helpers:BaseApplication>
