--- a/GuncelTelevizyonUWP/Views/MainPage.xaml
+++ b/GuncelTelevizyonUWP/Views/MainPage.xaml
@@ -8,6 +8,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GuncelTelevizyonUWP.Views"
+    xmlns:selectors="using:GuncelTelevizyonUWP.Selectors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -20,6 +21,11 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{Binding Icon}" FontFamily="Segoe MDL2 Assets" FontSize="22" Foreground="{ThemeResource AppBarItemForegroundThemeBrush}" />
                 <TextBlock Grid.Column="1" Text="{Binding Title}" FontFamily="Segoe UI" VerticalAlignment="Center" Foreground="{ThemeResource AppBarItemForegroundThemeBrush}" />
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="SeperatorItemTemplate">
+            <Grid Height="25">
+                <Border BorderThickness="1" BorderBrush="Gray" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
             </Grid>
         </DataTemplate>
         <Style x:Key="OpenCloseButtonTemplate" TargetType="Button">
@@ -81,9 +87,9 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <selectors:HamburgerMenuItemSelector x:Key="hamburgerMenuItemSelector" MenuItemTemplate="{StaticResource HamburgerMenuItemTemplate}" SeperatorTemplate="{StaticResource SeperatorItemTemplate}" />
     </helpers:BasePage.Resources>
-
-    <SplitView DisplayMode="CompactOverlay" IsPaneOpen="{Binding IsPaneOpen}" CompactPaneLength="50">
+    <SplitView DisplayMode="Overlay" IsPaneOpen="{Binding IsPaneOpen}" CompactPaneLength="50">
         <interactivity:Interaction.Behaviors>
             <core:EventTriggerBehavior EventName="PaneClosed">
                 <core:InvokeCommandAction Command="{Binding PaneClosingCommand}"/>
@@ -103,21 +109,25 @@
                     </Grid.RowDefinitions>
 
                     <!-- Open Menu -->
-                    <Grid>
-                        <Button Content="" Command="{Binding AnimatePaneCommand}" FontFamily="Segoe MDL2 Assets" Grid.Row="0" Background="{x:Null}" FontSize="22" Width="50" Style="{StaticResource OpenCloseButtonTemplate}" />
-                    </Grid>
+                    <Button Content="" Command="{Binding AnimatePaneCommand}" FontFamily="Segoe MDL2 Assets" Grid.Row="0" Background="{x:Null}" FontSize="22" Width="50" Style="{StaticResource OpenCloseButtonTemplate}" Margin="0,15,0,0" />
                     <!-- Channel Categories -->
-                    <ListView Margin="0,10" Grid.Row="1" ItemsSource="{Binding HamburgerMenuItems}" SelectedValue="{Binding SelectedHamburgerMenuItem,Mode=TwoWay}" ItemTemplate="{StaticResource HamburgerMenuItemTemplate}">
-                        <interactivity:Interaction.Behaviors>
-                            <core:EventTriggerBehavior EventName="SelectionChanged">
-                                <core:InvokeCommandAction Command="{Binding PaneClosingCommand}"/>
-                            </core:EventTriggerBehavior>
-                        </interactivity:Interaction.Behaviors>
-                    </ListView>
-
+                    <ScrollViewer Margin="0,10" Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                        <ListView  ItemsSource="{Binding HamburgerMenuItems}" SelectedValue="{Binding SelectedHamburgerMenuItem,Mode=TwoWay}" ItemTemplateSelector="{StaticResource hamburgerMenuItemSelector}">
+                            <interactivity:Interaction.Behaviors>
+                                <core:EventTriggerBehavior EventName="SelectionChanged">
+                                    <core:InvokeCommandAction Command="{Binding PaneClosingCommand}"/>
+                                </core:EventTriggerBehavior>
+                            </interactivity:Interaction.Behaviors>
+                        </ListView>
+                    </ScrollViewer>
                     <!-- Bottom Panel -->
                     <Grid Grid.Row="2" Margin="0,0,0,10">
-                        <ListView ItemsSource="{Binding BottomHamburgerMenuItems}" SelectedValue="{Binding SelectedHamburgerMenuItem,Mode=TwoWay}" ItemTemplate="{StaticResource HamburgerMenuItemTemplate}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Border BorderThickness="0.5" BorderBrush="Gray" HorizontalAlignment="Stretch" Margin="12,6" />
+                        <ListView Grid.Row="1" ItemsSource="{Binding BottomHamburgerMenuItems}" SelectedValue="{Binding SelectedHamburgerMenuItem,Mode=TwoWay}" ItemTemplate="{StaticResource HamburgerMenuItemTemplate}">
                             <interactivity:Interaction.Behaviors>
                                 <core:EventTriggerBehavior EventName="SelectionChanged">
                                     <core:InvokeCommandAction Command="{Binding PaneClosingCommand}"/>
@@ -130,7 +140,21 @@
         </SplitView.Pane>
 
         <SplitView.Content>
-            <helpers:SubPage x:Name="subView" PageParameter="{Binding SubPageParameter}" PageName="{Binding SubPageName}" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid Height="50" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Content="" Command="{Binding AnimatePaneCommand}" FontFamily="Segoe MDL2 Assets" Grid.Row="0" Background="{x:Null}" FontSize="22" Width="50" Style="{StaticResource OpenCloseButtonTemplate}" VerticalAlignment="Center" HorizontalAlignment="Left" />
+                    <TextBlock Text="Güncel Televizyon" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25.333" FontFamily="Yu Gothic UI Semilight" />
+                </Grid>
+                <helpers:SubPage x:Name="subView" PageParameter="{Binding SubPageParameter}" PageName="{Binding SubPageName}" Grid.Row="1" />
+            </Grid>
         </SplitView.Content>
     </SplitView>
 </helpers:BasePage>
