New converters and it's resources are added.

--- a/GuncelTelevizyonUWP/App.xaml
+++ b/GuncelTelevizyonUWP/App.xaml
@@ -13,6 +13,9 @@
         <converters:DarkAppThemeToBooleanConverter x:Key="darkThemeToBoolean" />
         <converters:LightThemeToBooleanConverter x:Key="lightThemeToBoolean" />
         <converters:CountToBooleanConverter x:Key="countToBoolean" />
+        <converters:NullToVisibilityConverter x:Key="nullToVisibility" />
+        <converters:BooleanToVisibilityConverter x:Key="boolToVisibility" />
+        <converters:BooleanToVisibilityReverseConverter x:Key="boolToVisibilityReverse" />
 
         <!-- Styles -->
         <Style x:Key="HorizontalContentStretchStyle" TargetType="ListViewItem">
